--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,12 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#container{
+    display: grid;
+    margin: 50px auto;
+}
+
+#container > div{
+    
+}
