--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#container{
-    display: grid;
-    margin: 50px auto;
+body{
+    background: lightblue;
 }
 
-#container > div{
-    
+#container{
+    display: grid;
+    background: white;
+    margin: 50px auto;
 }
